<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="ddra.com.musicapp.ExerciseOptions_Chords"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chordOps_txt_inv"
        android:id="@+id/chordOps_txt_inv"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chordOps_cb_inv"
        android:id="@+id/chordOps_cb_inv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chordOps_txt_voi"
        android:id="@+id/chordOps_txt_voi"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chordOps_rb_cd"
            android:id="@+id/chordOps_rb_cd"
            android:checked="true"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chordOps_rb_op"
            android:id="@+id/chordOps_rb_op"
            android:checked="false"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exerOps_rb_any"
            android:id="@+id/chordOps_rb_any"
            android:checked="false"
            android:layout_weight="1" />
    </RadioGroup>

</LinearLayout>
