<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ddra.com.musicapp.ExerciseOptions_Intervals"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/intervalOps_txt_type"
        android:id="@+id/intervalOps_txt_type" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intervalOps_tBtn_melo"
            android:id="@+id/intervalOps_rb_melo"
            android:checked="true"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intervalOps_tBtn_harm"
            android:id="@+id/intervalOps_rb_harm"
            android:checked="false"
            android:layout_weight="1" />

    </RadioGroup>

</LinearLayout>
