<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ddra.com.musicapp.MelodicDictation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Number of questions"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/seek_bar"
            android:layout_weight="100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:id="@+id/seek_bar_number"
            android:textSize="20dp"/>
        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_note"
        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="@integer/abc_max_action_buttons">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes_ascending"
                android:layout_weight="30"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes_descending"
                android:layout_weight="30"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Any"
                android:layout_weight="40"/>

        </RadioGroup>

        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_timing"
        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@integer/abc_max_action_buttons">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/notes_melodic"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/notes_harmonic"
                android:layout_weight="1"/>

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number of notes                        Intervals"
        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <NumberPicker
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:id="@+id/number_picker"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    >

                    </NumberPicker>

                <View
                    android:layout_width="100dp"
                    android:layout_height="50dp">

                    </View>

                <!-- <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Intervals"
                    android:textSize="12dp"/> -->

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="250dip"
                android:id="@+id/scroll_view"
                android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/linear_layout">

                        </LinearLayout>

                </ScrollView>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exerOps_btn_start"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        </LinearLayout>

</LinearLayout>
