<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ddra.com.musicapp.ExerciseOptions"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/exerOps_txt_qNum"
            android:id="@+id/exerOps_txt_qNum" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/exerOps_sb_qNum"
                android:layout_weight="9"
                android:max="100" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/exerOps_txt_sbProgress"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="000" />
        </LinearLayout>

        <!--fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:name="ddra.com.musicapp.ExerciseOptions_Intervals"
            android:id="@+id/fragment" /-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/exerOps_fLay_fragmentHolder"></LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/exerOps_txt_selectLbl"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exerOps_btn_selectAll"
                android:id="@+id/exerOps_btn_selectAll"
                android:onClick="selectAll"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/exerOps_sv_list">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/exerOps_lLay_list">
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exerOps_btn_start"
        android:id="@+id/exerOps_btn_start"
        android:onClick="goToExercise"/>

</LinearLayout>
